Examenfinal/grammar/libs/SimpleLanguageParser.cpp

// Generated from SimpleLanguage.g4 by ANTLR 4.13.1


#include "SimpleLanguageVisitor.h"

#include "SimpleLanguageParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SimpleLanguageParserStaticData final {
  SimpleLanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SimpleLanguageParserStaticData(const SimpleLanguageParserStaticData&) = delete;
  SimpleLanguageParserStaticData(SimpleLanguageParserStaticData&&) = delete;
  SimpleLanguageParserStaticData& operator=(const SimpleLanguageParserStaticData&) = delete;
  SimpleLanguageParserStaticData& operator=(SimpleLanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag simplelanguageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SimpleLanguageParserStaticData *simplelanguageParserStaticData = nullptr;

void simplelanguageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (simplelanguageParserStaticData != nullptr) {
    return;
  }
#else
  assert(simplelanguageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SimpleLanguageParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "ifStatement", "expression", "fibonacciCall"
    },
    std::vector<std::string>{
      "", "'IF'", "'THEN'", "'ELSE'", "'('", "')'", "'+'", "'-'", "'*'", 
      "'/'", "'FIB'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "NUMBER", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simplelanguageParserStaticData = staticData.release();
}

}

SimpleLanguageParser::SimpleLanguageParser(TokenStream *input) : SimpleLanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SimpleLanguageParser::SimpleLanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SimpleLanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simplelanguageParserStaticData->atn, simplelanguageParserStaticData->decisionToDFA, simplelanguageParserStaticData->sharedContextCache, options);
}

SimpleLanguageParser::~SimpleLanguageParser() {
  delete _interpreter;
}

const atn::ATN& SimpleLanguageParser::getATN() const {
  return *simplelanguageParserStaticData->atn;
}

std::string SimpleLanguageParser::getGrammarFileName() const {
  return "SimpleLanguage.g4";
}

const std::vector<std::string>& SimpleLanguageParser::getRuleNames() const {
  return simplelanguageParserStaticData->ruleNames;
}

const dfa::Vocabulary& SimpleLanguageParser::getVocabulary() const {
  return simplelanguageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SimpleLanguageParser::getSerializedATN() const {
  return simplelanguageParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

SimpleLanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SimpleLanguageParser::StatementContext *> SimpleLanguageParser::ProgramContext::statement() {
  return getRuleContexts<SimpleLanguageParser::StatementContext>();
}

SimpleLanguageParser::StatementContext* SimpleLanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<SimpleLanguageParser::StatementContext>(i);
}


size_t SimpleLanguageParser::ProgramContext::getRuleIndex() const {
  return SimpleLanguageParser::RuleProgram;
}


std::any SimpleLanguageParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleLanguageVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SimpleLanguageParser::ProgramContext* SimpleLanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleLanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(11); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(10);
      statement();
      setState(13); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3090) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SimpleLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleLanguageParser::IfStatementContext* SimpleLanguageParser::StatementContext::ifStatement() {
  return getRuleContext<SimpleLanguageParser::IfStatementContext>(0);
}

SimpleLanguageParser::ExpressionContext* SimpleLanguageParser::StatementContext::expression() {
  return getRuleContext<SimpleLanguageParser::ExpressionContext>(0);
}

SimpleLanguageParser::FibonacciCallContext* SimpleLanguageParser::StatementContext::fibonacciCall() {
  return getRuleContext<SimpleLanguageParser::FibonacciCallContext>(0);
}


size_t SimpleLanguageParser::StatementContext::getRuleIndex() const {
  return SimpleLanguageParser::RuleStatement;
}


std::any SimpleLanguageParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleLanguageVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleLanguageParser::StatementContext* SimpleLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleLanguageParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(18);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleLanguageParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(15);
        ifStatement();
        break;
      }

      case SimpleLanguageParser::T__3:
      case SimpleLanguageParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(16);
        expression(0);
        break;
      }

      case SimpleLanguageParser::T__9: {
        enterOuterAlt(_localctx, 3);
        setState(17);
        fibonacciCall();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

SimpleLanguageParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleLanguageParser::ExpressionContext* SimpleLanguageParser::IfStatementContext::expression() {
  return getRuleContext<SimpleLanguageParser::ExpressionContext>(0);
}

std::vector<SimpleLanguageParser::StatementContext *> SimpleLanguageParser::IfStatementContext::statement() {
  return getRuleContexts<SimpleLanguageParser::StatementContext>();
}

SimpleLanguageParser::StatementContext* SimpleLanguageParser::IfStatementContext::statement(size_t i) {
  return getRuleContext<SimpleLanguageParser::StatementContext>(i);
}


size_t SimpleLanguageParser::IfStatementContext::getRuleIndex() const {
  return SimpleLanguageParser::RuleIfStatement;
}


std::any SimpleLanguageParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleLanguageVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleLanguageParser::IfStatementContext* SimpleLanguageParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleLanguageParser::RuleIfStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(20);
    match(SimpleLanguageParser::T__0);
    setState(21);
    expression(0);
    setState(22);
    match(SimpleLanguageParser::T__1);
    setState(23);
    statement();
    setState(26);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(24);
      match(SimpleLanguageParser::T__2);
      setState(25);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

SimpleLanguageParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleLanguageParser::ExpressionContext::NUMBER() {
  return getToken(SimpleLanguageParser::NUMBER, 0);
}

std::vector<SimpleLanguageParser::ExpressionContext *> SimpleLanguageParser::ExpressionContext::expression() {
  return getRuleContexts<SimpleLanguageParser::ExpressionContext>();
}

SimpleLanguageParser::ExpressionContext* SimpleLanguageParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<SimpleLanguageParser::ExpressionContext>(i);
}


size_t SimpleLanguageParser::ExpressionContext::getRuleIndex() const {
  return SimpleLanguageParser::RuleExpression;
}


std::any SimpleLanguageParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleLanguageVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


SimpleLanguageParser::ExpressionContext* SimpleLanguageParser::expression() {
   return expression(0);
}

SimpleLanguageParser::ExpressionContext* SimpleLanguageParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SimpleLanguageParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  SimpleLanguageParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, SimpleLanguageParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(34);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleLanguageParser::NUMBER: {
        setState(29);
        match(SimpleLanguageParser::NUMBER);
        break;
      }

      case SimpleLanguageParser::T__3: {
        setState(30);
        match(SimpleLanguageParser::T__3);
        setState(31);
        expression(0);
        setState(32);
        match(SimpleLanguageParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(50);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(48);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(36);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(37);
          match(SimpleLanguageParser::T__5);
          setState(38);
          expression(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(39);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(40);
          match(SimpleLanguageParser::T__6);
          setState(41);
          expression(4);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(42);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(43);
          match(SimpleLanguageParser::T__7);
          setState(44);
          expression(3);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(45);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(46);
          match(SimpleLanguageParser::T__8);
          setState(47);
          expression(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(52);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FibonacciCallContext ------------------------------------------------------------------

SimpleLanguageParser::FibonacciCallContext::FibonacciCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleLanguageParser::FibonacciCallContext::NUMBER() {
  return getToken(SimpleLanguageParser::NUMBER, 0);
}


size_t SimpleLanguageParser::FibonacciCallContext::getRuleIndex() const {
  return SimpleLanguageParser::RuleFibonacciCall;
}


std::any SimpleLanguageParser::FibonacciCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleLanguageVisitor*>(visitor))
    return parserVisitor->visitFibonacciCall(this);
  else
    return visitor->visitChildren(this);
}

SimpleLanguageParser::FibonacciCallContext* SimpleLanguageParser::fibonacciCall() {
  FibonacciCallContext *_localctx = _tracker.createInstance<FibonacciCallContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleLanguageParser::RuleFibonacciCall);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(SimpleLanguageParser::T__9);
    setState(54);
    match(SimpleLanguageParser::T__3);
    setState(55);
    match(SimpleLanguageParser::NUMBER);
    setState(56);
    match(SimpleLanguageParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

bool SimpleLanguageParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 3: return expressionSempred(antlrcpp::downCast<ExpressionContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool SimpleLanguageParser::expressionSempred(ExpressionContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 4);
    case 1: return precpred(_ctx, 3);
    case 2: return precpred(_ctx, 2);
    case 3: return precpred(_ctx, 1);

  default:
    break;
  }
  return true;
}

void SimpleLanguageParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  simplelanguageParserInitialize();
#else
  ::antlr4::internal::call_once(simplelanguageParserOnceFlag, simplelanguageParserInitialize);
#endif
}
